# robotanik-ros2-autonomous

./: README.md
robotanik_control/: package.xml  setup.cfg  setup.py
robotanik_control/data/: hastalik_haritasi_verileri.csv  sim_data.csv
robotanik_control/robotanik_control/: location_simulator_node.py  main_controller_node.py
robotanik_sim/: CMakeLists.txt  package.xml
robotanik_sim/config/: ekf.yaml
robotanik_sim/launch/: sim.launch.py
robotanik_sim/maps/: harita_uret.py  robotanik_sera.pgm
robotanik_sim/params/: nav2_params.yaml
robotanik_sim/scripts/: real_location_publisher.py  row_fsm.py
robotanik_sim/urdf/: robotanik.urdf
robotanik_sim/worlds/: world_uret.py
robotanik_vision/: setup.py
robotanik_vision/launch/: vision_subsystem.launch.py
robotanik_vision/models/: linear_risk_model_v4_noisy.pkl
robotanik_vision/robotanik_vision/: ai_analyzer_node.py  camera_node.py
sensor_hcsr04/: package.xml  setup.cfg  setup.py
sensor_hcsr04/sensor_hcsr04/: sensor_viewer.py  serial_bridge.py
src/robotanik_control/robotanik_control/: location_simulator_node.py  main_controller_node.py
src/robotanik_controller/: package.xml  setup.cfg  setup.py
src/robotanik_controller/launch/: main.launch.py
src/robotanik_controller/robotanik_controller/: heatmap_node.py  main_controller.py
src/robotanik_sim/: CMakeLists.txt
src/robotanik_sim/launch/: sim.launch.py
src/robotanik_sim/maps/: robotanik_sera.yaml
src/robotanik_sim/params/: nav2_params.yaml
src/robotanik_sim/scripts/: row_fsm.py  (+1 more)
src/robotanik_vision/: package.xml  setup.cfg
(+4 files in other folders)
